--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,6 +89,33 @@ section {
     border-top: 1px solid #fff;
 }
 
+.cart-list-item input[type="number"] {
+    width: 50px;
+}
+
+input.modern {
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: 2px solid black;
+    border-radius: 0;
+
+    -webkit-box-shadow: 
+      inset 0 0 0  rgba(0,0,0,0.1),
+            0 0 0 rgba(0,0,0,0.1); 
+    -moz-box-shadow: 
+      inset 0 0 0  rgba(0,0,0,0.1),
+            0 0 0 rgba(0,0,0,0.1); 
+    box-shadow: 
+      inset 0 0 0  rgba(0,0,0,0.1),
+            0 0 0 rgba(0,0,0,0.1); 
+
+    height: 35px;
+    /* padding: 6px 12px; */
+    font-size: 16px;
+    line-height: 1.5;
+}
+
 .glyphicon.glyphicon-remove-sign {
     font-size: 25px;
     color: red;
