--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,6 @@
    background-color: #fff;
    border-bottom: 1px solid #d9d9d9; 
 }
-   
 
 .navbar-brand {
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -35,6 +34,10 @@ section {
 	padding: 50px 0 50px 0;
 }
 
+.no-header {
+    padding-top: 100px;
+}
+
 .separator {
     line-height: 0.5;
     text-align: center;
@@ -47,6 +50,35 @@ section {
     display: block;
     clear: both;
 }
+
+.btn-outline {
+    background-color: transparent;
+    color: inherit;
+    transition: all .5s;
+}
+
+.btn-primary.btn-outline {
+    color: #428bca;
+}
+
+.btn-success.btn-outline {
+    color: #5cb85c;
+}
+
+.btn-primary.btn-outline:hover,
+.btn-success.btn-outline:hover,
+.btn-info.btn-outline:hover,
+.btn-warning.btn-outline:hover,
+.btn-danger.btn-outline:hover {
+    color: #fff;
+}
+
+/*.btn-success-outline {
+    color: #5cb85c;
+    background-color: transparent;
+    background-image: none;
+    border-color: #5cb85c;
+}*/
 
 .avatar {
     display: inline-block;
@@ -158,6 +190,15 @@ input.modern {
 span.glyphicon.glyphicon-remove-sign:hover {
 	color: brown;
     opacity: 0.8;
+}
+
+#order .panel .list-group-item {
+    min-height: 70px;
+}
+
+#order .panel .panel-footer {
+    min-height: 50px;
+    font-size: 20px;
 }
 
 
